test/netlist/error/type-clash.bop
#include <stdlib.bop>

#define X "hello"

Main(a:[X]) = s
where
  s = And[X](a[0..X - 1]);
end where;
